# kube

./: README.md
log_output/: Dockerfile  README.MD  string.py
log_output/manifests/: deployment.yaml
the_project/: pyproject.toml  requirements.lock.txt
todo/: Dockerfile  app.py  pyproject.toml  requirements.lock.txt
todo/manifests/: deployment.yaml  service.yaml
todo/static/: index.html
